--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -171,7 +171,7 @@
   .content {
     @apply col-span-12 md:col-span-7;
 
-    h2 {
+    .title {
       @apply mx-auto md:mx-0;
     }
 
